trunk:  - added DAVRepository and SVNRepository's implementations of the log method    with includeMergedRevisions and omitLogText arguments  - bugfix in SVNCommand.countNewLines() - increment by 1 for each EOL found,    FSLog - use total long values returned by sendLogTree() as a return value  - added -g and --quiet handling to SVNXMLLogHandler